Bug 690571 - Problem with GV on servers of Xorg
Summary: Problem with GV on servers of Xorg
Status: RESOLVED FIXED
Alias: None
Product: Ghostscript
Classification: Unclassified
Component: X Display Driver (show other bugs)
Version: 8.64
Hardware: PC Linux
: P4 normal
Assignee: Chris Liddell (chrisl)
URL:
Keywords:
Depends on: 690444
Blocks:
  Show dependency tree
 
Reported: 2009-06-24 07:49 UTC by Dr. Werner Fink
Modified: 2013-11-08 01:30 UTC (History)
3 users (show)

See Also:
Customer:
Word Size: ---


Attachments
ghostscript-8.61-x11.dif (1.67 KB, patch)
2009-06-24 07:49 UTC, Dr. Werner Fink
Details | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Dr. Werner Fink 2009-06-24 07:49:07 UTC
For GV (and ghostview) a memory deivce is used. The problem is now
that most time the width and height of the memory device is not
identical with the xdev device its self. Also extrem large bbox
can lead to problems on systems with less physical memory.
Comment 1 Dr. Werner Fink 2009-06-24 07:49:50 UTC
Created attachment 5156 [details]
ghostscript-8.61-x11.dif

This patch avoids these two problems.
Comment 2 Hin-Tak Leung 2010-06-27 00:44:49 UTC
There is a related bug 690444 (and patch) and the two should be reviewed together.
Comment 3 Hin-Tak Leung 2010-07-05 03:11:49 UTC
(In reply to comment #0)
> For GV (and ghostview) a memory deivce is used. The problem is now
> that most time the width and height of the memory device is not
> identical with the xdev device its self. Also extrem large bbox
> can lead to problems on systems with less physical memory.

Is there a test file with large bbox you can post that can trigger this problem?
Comment 4 Hin-Tak Leung 2010-08-02 00:17:39 UTC
Confirm and re-assign bugs with attached/in-line patches for another person to review.
Comment 5 Chris Liddell (chrisl) 2013-11-08 01:30:54 UTC
Patch applied:
http://git.ghostscript.com/?p=ghostpdl.git;a=commitdiff;h=4a4a912b

Thanks for the contribution.